# song-generator

./: README.md  pyproject.toml
song_generator/: model.py
tests/: test_song_generator.py
