[tool.poetry]
name = "song-generator"
version = "0.1.0"
description = "Simple song generator using common chord transitions"
authors = ["jsbaxter <james@jsbaxter.dev>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

